--- a/css/footer.scss
+++ b/css/footer.scss
@@ -63,15 +63,15 @@ $footerHeight: 21.188rem;
     }
 
     &.facebook {
-      @include maskImage(url('../images/facebook.png'))
+      @include maskImage(url('public/images/facebook.png'))
     }
 
     &.twitter {
-      @include maskImage(url('../images/twitter.png'))
+      @include maskImage(url('public/images/twitter.png'))
     }
 
     &.pinterest {
-      @include maskImage(url('../images/pinterest.png'))
+      @include maskImage(url('public/images/pinterest.png'))
     }
   }
 }
