--- a/css/screens/we-are.scss
+++ b/css/screens/we-are.scss
@@ -88,7 +88,7 @@
       }
 
       &:after {
-        background-image: url("/public/images/s2_1.png");
+        background-image: url("/public/images/s2_1.webp");
       }
     }
 
@@ -114,7 +114,7 @@
 
       &:after {
         order: 1;
-        background-image: url("/public/images/s2_2.png");
+        background-image: url("/public/images/s2_2.webp");
         background-position: center center;
       }
 
